# libpoker

./: CMakeLists.txt  card.hpp  deck.hpp  hands.hpp
include/: card.hpp  hands.hpp
src/: card.cpp  hands.cpp
tests/: test1.cpp
